--- a/text_recognizer/src/main/AndroidManifest.xml
+++ b/text_recognizer/src/main/AndroidManifest.xml
@@ -2,8 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kg.nurtelecom.text_recognizer">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <meta-data
         android:name="com.google.mlkit.vision.DEPENDENCIES"
         android:value="ocr" />
+
+    <application>
+
+        <activity
+            android:name=".photo_capture.PhotoCaptureActivity"
+            android:screenOrientation="portrait" />
+
+    </application>
 
 </manifest>
