--- a/text_recognizer/src/main/AndroidManifest.xml
+++ b/text_recognizer/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="kg.nurtelecom.text_recognizer">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <meta-data
         android:name="com.google.mlkit.vision.DEPENDENCIES"
