Update designChili 1 to DesignChili2

--- a/text_recognizer/build.gradle
+++ b/text_recognizer/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
 
-    implementation 'com.github.ealmaz:DesignChili:0.0.0.132'
+    implementation 'com.github.ealmaz:DesignChili2:0.0.0.26'
 
     def camerax_version = "1.0.2"
 
