--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     implementation project(':text_recognizer')
 
-    implementation 'com.github.ealmaz:DesignChili:0.0.0.132'
+    implementation 'com.github.ealmaz:DesignChili2:0.0.0.26'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
