--- a/text_recognizer/build.gradle
+++ b/text_recognizer/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
 
-    implementation 'com.github.ealmaz:DesignChili2:0.0.0.187'
+    implementation 'com.github.ealmaz:DesignChili2:0.0.0.288'
+    implementation 'com.google.guava:guava:29.0-android'
 
     def camerax_version = "1.0.2"
 
