--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     implementation project(':text_recognizer')
 
-    implementation 'com.github.ealmaz:DesignChili2:1.0.166_test'
+    implementation 'com.github.ealmaz:DesignChili2:1.0.195'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
